# wasm-template

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
