[package]
name = "wasm-template"
version = "2025.4.0"
edition = "2024"
description = "WebAssembly Rust Template"
repository = "https://github.com/ArkSumCode/wasm-template"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.77", features = [
	'Document',
	'Element',
	'HtmlElement',
	'Node',
	'Window',
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
